@@ -30,7 +30,8 @@
  * @requires vm.jvmti
  * @library /test/lib /test/hotspot/jtreg/serviceability/jvmti/RedefineClasses /test/hotspot/jtreg/runtime/cds/appcds
  * @run driver RedefineClassHelper
- * @build sun.hotspot.WhiteBox RedefineRunningMethods_SharedHelper
+ * @build sun.hotspot.WhiteBox
+ * @compile --enable-preview -source ${jdk.version} RedefineRunningMethods_SharedHelper.java
  * @run driver RedefineRunningMethods_Shared
  */
 
@@ -67,6 +68,7 @@ public class RedefineRunningMethods_Shared {
                                  use_whitebox_jar,
                                  "-XX:+UnlockDiagnosticVMOptions",
                                  "-XX:+WhiteBoxAPI",
+                                 "--enable-preview",
                                  // These arguments are expected by RedefineRunningMethods
                                  "-javaagent:redefineagent.jar",
                                  "-Xlog:redefine+class+iklass+add=trace,redefine+class+iklass+purge=trace",
